src/index.css
:root {
  --dark-darkest: #1e1f22;
  --dark-darker: #2b2d31;
  --dark-main: #313338;
  --dark-light: #b5bac1;
  --dark-text: #949ba4;
  --dark-lighter: #dddee1;
  --dark-msg: #c1c3c7;
  --dark-highlight: #404249;
  --dark-hover: #35373c;
  --dark-lightest: white;
  --dark-profile-bar: #232428;
  --dark-about-me: #111214;
  --dark-msg-hover: #2e3035;
}

* {
  margin: 0;
  box-sizing: border-box;
  color: var(--dark-text);
  font-family: "Roboto", Arial, Helvetica, sans-serif;
  letter-spacing: 0.02rem;
  text-decoration: inherit;
}

.material-icons {
  font-family: "Material Icons";
  font-weight: normal;
  font-style: normal;
  font-size: 1.5rem; /* Preferred icon size */
  display: inline-block;
  line-height: 1;
  text-transform: none;
  letter-spacing: normal;
  word-wrap: normal;
  white-space: nowrap;
  direction: ltr;
  user-select: none;

  /* Support for all WebKit browsers. */
  -webkit-font-smoothing: antialiased;
  /* Support for Safari and Chrome. */
  text-rendering: optimizeLegibility;

  /* Support for Firefox. */
  -moz-osx-font-smoothing: grayscale;

  /* Support for IE. */
  font-feature-settings: "liga";
}

html,
body {
  height: 100vh;
  overflow-x: scroll;
  /* overflow-y: hidden; */
  width: 100%;
}

html::-webkit-scrollbar {
  width: 0;
  height: 0;
}
body::-webkit-scrollbar {
  width: 0;
  height: 0;
}

body {
  background: var(--dark-main);
}

input:focus {
  outline: none;
}

input[type="color"]::-moz-color-swatch {
  border: none;
}
input[type="color"]::-webkit-color-swatch-wrapper {
  padding: 0;
  border-radius: 0;
}
input[type="color"]::-webkit-color-swatch {
  border: none;
}

label {
  user-select: none;
  cursor: pointer;
}

.App {
  height: 100vh;
  display: flex;
}

.bonfire-text {
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
  margin-top: -5px;
  margin-left: 2.5px;
}
.bonfire-text span {
  color: #f58213;
  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
}

.sidebar {
  background: var(--dark-darkest);
  width: 80px;
  padding: 10px;
  height: auto;
  overflow-y: scroll;
  overflow-x: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  flex-shrink: 0;
  z-index: 1;
}
.sidebar::-webkit-scrollbar {
  width: 5px;
}
.sidebar::-webkit-scrollbar-track {
  background-color: none;
}
.sidebar::-webkit-scrollbar-thumb {
  background-color: var(--dark-main);
  border-radius: 3px;
}
.sidebar * {
  flex-shrink: 0;
}

.friends-list {
  grid-area: friends-list;
  overflow-y: scroll;
  padding: 12px 25px;
  height: auto;
}
.friends-list::-webkit-scrollbar {
  width: 5px;
}
.friends-list::-webkit-scrollbar-track {
  background-color: none;
}
.friends-list::-webkit-scrollbar-thumb {
  background-color: var(--dark-darker);
  border-radius: 3px;
}

.search-container {
  position: relative;
  width: 100%;
}
.search-bar {
  background: var(--dark-darkest);
  border: none;
  outline: none;
  color: var(--dark-msg);
  border-radius: 4px;
}
.friends-list .search-bar {
  width: 100%;
  padding: 8px 10px;
  color: var(--dark-msg);
  border-radius: 4px;
  margin-top: 5px;
  margin-bottom: 5px;
  font-size: 0.95rem;
}
.search-icon {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 8px;
}

.server-icon-container {
  border-radius: 50%;
}
.server-icon {
  width: 50px;
  height: 50px;
  border-radius: 50%;
  overflow: hidden;
  transition-duration: 210ms;
  margin: 5px 0;
  margin-left: 2.5px;
  display: block;
}
.server-icon-container:hover .tooltip-wrapper {
  visibility: visible;
}
.server-icon-container .tooltip-wrapper {
  position: fixed;
  visibility: hidden;
  left: 80px;
  /* top: 50%; */
}
.server-icon-container .tooltip {
  transform: translateY(-50%);
  background: var(--dark-about-me);
  border-radius: 4px;
  padding: 5px 10px;
  color: var(--dark-lighter);
}
.main-icon {
  width: 55px;
  height: 55px;
  background: var(--dark-main);
}
.server-icon:hover {
  cursor: pointer;
  background: #5865f2;
  border-radius: 30%;
}
.pfp-img {
  width: 100%;
  height: 100%;
  object-fit: cover;
}
.main-icon-img {
  padding: 4px;
}

.hor-line {
  width: 60%;
  height: 2px;
  background: var(--dark-main);
  margin: 5px 0;
}

.friends-page {
  width: 100%;
  height: auto;
  display: grid;
  grid-template-areas:
    "friends-bar friends-list"
    "profile-bar friends-list";
  grid-template-columns: 240px 1fr;
  grid-template-rows: 1fr min-content;
}

.friends-bar {
  grid-area: friends-bar;
  width: 240px;
  height: auto;
  padding: 8px;
  background: var(--dark-darker);
  overflow-y: scroll;
  overflow-x: hidden;
}
.friends-bar::-webkit-scrollbar {
  width: 5px;
}
.-friends-bar::-webkit-scrollbar-track {
  background-color: none;
}
.friends-bar::-webkit-scrollbar-thumb {
  background-color: var(--dark-darkest);
  border-radius: 3px;
}

.friends-icon {
  font-size: 1.875rem;
}
.friend-tab {
  width: 100%;
  padding: 6px 10px;
  border-radius: 5px;
  display: flex;
  align-items: center;
  gap: 14px;
}
.friend-tab:hover {
  background: var(--dark-hover);
  cursor: pointer;
}
.friend-tab:hover * {
  color: var(--dark-lighter);
}

.direct-msgs-txt {
  width: 100%;
  font-size: 0.75rem;
  font-weight: 500;
  padding: 6px 10px;
  color: var(--dark-text);
  font-weight: bold;
  margin-top: 10px;
  margin-bottom: 5px;
  letter-spacing: 0.05rem;
}
.direct-msgs-txt:hover {
  cursor: default;
}

.friend-pfp {
  width: 32px;
  height: 32px;
  border-radius: 50%;
  overflow: hidden;
}
.friend-dm {
  position: relative;
  display: grid;
  grid-template-columns: 32px 1fr;
  width: 100%;
  padding: 5px 7px;
  align-items: center;
  gap: 10px;
  overflow: hidden;
  border-radius: 5px;
  margin-bottom: 2px;
  min-width: 0;
}
.friend-dm:hover {
  background: var(--dark-hover);
  cursor: pointer;
}
.friend-dm:hover .friend-name {
  color: var(--dark-lighter);
}
/* ... */

